--- a/index.html
+++ b/index.html
@@ -10,17 +10,37 @@
 </head>
 
 <body>
-    <div id="header">
+    <div class="container-fluid text-center">
+        <div id="header">
+            <h1>Pomodoro Clock</h1>
+            <h2>Time Management App</h2>
+        </div>
+        <h3>Session</h3>
+        <div class="row setTime"></div>
+        <div class="col-sm-4">
+            <button>-</button>
+        </div>
+        <div class="col-sm-4 work">Work</p>
+        </div>
+        <div class="col-sm-4">
+            <button>+</button>
+        </div>
+        <h3>Break</h3>
+        <div class="row setTime"></div>
+        <div class="col-sm-4">
+            <button>-</button>
+        </div>
+        <div class="col-sm-4 rest">Rest</p>
+        </div>
+        <div class="col-sm-4">
+            <button>+</button>
+        </div>
+        <div class="timer"></div>
     </div>
-
-    <div class="container-fluid">
-    </div>
-
     <footer class="text-center">
         <p>Developed by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
     </footer>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 
