--- a/index.html
+++ b/index.html
@@ -15,33 +15,31 @@
             <h1>Pomodoro Clock</h1>
             <h2>Time Management App</h2>
         </div>
-        <h3>Session</h3>
-        <div class="row setTime"></div>
-        <div class="col-sm-4">
-            <button>-</button>
+        <div id="setTime">
+            <div class="row"></div>
+            <div class="col-sm-12">
+                <h3>Session</h3></div>
+            <div type="button" id="sessionLess" class="btn col-sm-4 lessMore">-</div>
+            <div id="work" class="col-sm-4">25m</p>
+            </div>
+            <div type="button" id="sessionMore" class="btn col-sm-4 lessMore">+</div>
+            <div class="col-sm-12">
+                <h3>Break</h3></div>
+            <div class="row setTime"></div>
+            <div type="button" id="breakLess" class="btn col-sm-4 lessMore">-</div>
+            <div id="rest" class="col-sm-4">5m</p>
+            </div>
+            <div type="button" id="breakMore" class="btn col-sm-4 lessMore">+</div>
+            <div id="timer">
+                <div id="timer-bar">
+                </div>
+            </div>
         </div>
-        <div class="col-sm-4 work">Work</p>
-        </div>
-        <div class="col-sm-4">
-            <button>+</button>
-        </div>
-        <h3>Break</h3>
-        <div class="row setTime"></div>
-        <div class="col-sm-4">
-            <button>-</button>
-        </div>
-        <div class="col-sm-4 rest">Rest</p>
-        </div>
-        <div class="col-sm-4">
-            <button>+</button>
-        </div>
-        <div class="timer"></div>
-    </div>
-    <footer class="text-center">
-        <p>Developed by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="script.js"></script>
+        <footer class="text-center">
+            <p>Developed by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
+        </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
