Add inc /dec function to timer buttons

--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
             <h2>Time Management App</h2>
         </div>
         <div id="setTime">
-            <div class="row"></div>
-            <div class="col-sm-12">
-                <h3>Session</h3></div>
-            <div type="button" id="sessionLess" class="btn col-sm-4 lessMore">-</div>
-            <div id="work" class="col-sm-4">25m</p>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3>Session</h3></div>
+                <div type="button" id="sessionLess" class="btn col-sm-4 lessMore">-</div>
+                <div id="work" class="col-sm-4">25m</p>
+                </div>
+                <div type="button" id="sessionMore" class="btn col-sm-4 lessMore">+</div>
+                <div class="col-sm-12">
+                    <h3>Break</h3></div>
+                <div class="row setTime"></div>
+                <div type="button" id="breakLess" class="btn col-sm-4 lessMore">-</div>
+                <div id="rest" class="col-sm-4">5m</p>
+                </div>
+                <div type="button" id="breakMore" class="btn col-sm-4 lessMore">+</div>
             </div>
-            <div type="button" id="sessionMore" class="btn col-sm-4 lessMore">+</div>
-            <div class="col-sm-12">
-                <h3>Break</h3></div>
-            <div class="row setTime"></div>
-            <div type="button" id="breakLess" class="btn col-sm-4 lessMore">-</div>
-            <div id="rest" class="col-sm-4">5m</p>
-            </div>
-            <div type="button" id="breakMore" class="btn col-sm-4 lessMore">+</div>
+            <div type="button" id="start" class="btn">Start</div>
             <div id="timer">
                 <div id="timer-bar">
                 </div>
