--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Pomodoro Clock</h1>
             <h2>Time Management App</h2>
         </div>
-        <div id="setTime">
+        <div id="getTime">
             <div class="row">
                 <div class="col-sm-6">
                     <h3>Session</h3>
