Adjust style and layout of buttons

--- a/index.html
+++ b/index.html
@@ -17,29 +17,27 @@
         </div>
         <div id="getTime">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-md-6">
                     <h3>Session</h3>
-                    <div class="row">
-                        <div type="button" id="sessionLess" class="btn col-sm-4 lessMore">-</div>
-                        <div id="work" class="col-sm-4">25m</p>
-                        </div>
-                        <div type="button" id="sessionMore" class="btn col-sm-4 lessMore">+</div>
+                    <div class="row adjust">
+                        <div type="button" id="sessionLess" class="btn col-xs-4 lessMore">-</div>
+                        <div id="work" class="col-xs-4">25m</div>
+                        <div type="button" id="sessionMore" class="btn col-xs-4 lessMore">+</div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-md-6">
                     <h3>Break</h3>
-                    <div class="row">
+                    <div class="row adjust">
                         <div class="row setTime"></div>
-                        <div type="button" id="breakLess" class="btn col-sm-4 lessMore">-</div>
-                        <div id="rest" class="col-sm-4">5m</p>
-                        </div>
-                        <div type="button" id="breakMore" class="btn col-sm-4 lessMore">+</div>
+                        <div type="button" id="breakLess" class="btn col-xs-4 lessMore">-</div>
+                        <div id="rest" class="col-xs-4">5m</div>
+                        <div type="button" id="breakMore" class="btn col-xs-4 lessMore">+</div>
                     </div>
                 </div>
             </div>
         </div>
         <div type="button" id="start" class="btn">Start</div>
-        <div id="displayTime">25m 00s</div>
+        <div id="displayTime">25:00</div>
     </div>
     <footer class="text-center">
         <p>Developed by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
