--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
         </div>
         <div type="button" id="start" class="btn">Start</div>
+         <div id="message">&nbsp;</div>
         <div id="displayTime">25:00</div>
     </div>
     <footer class="text-center">
