--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Pommodoro</title>
+    <title>Pomodoro Clock</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -41,10 +41,13 @@
         <div id="displayTime">25:00</div>
     </div>
     <footer class="text-center">
-        <p>Developed by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
+    <p>Notification sound provided by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
+        <p>Developed by <a href="http://www.orangefreesounds.com/">OrangeFreeSounds.com</a></p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="script.js"></script>
+    <script src="../js/stats.js"></script>
+
 </body>
 
 </html>
