--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div id="displayTime">25:00</div>
     </div>
     <footer class="text-center">
-    <p>Notification sound provided by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
-        <p>Developed by <a href="http://www.orangefreesounds.com/">OrangeFreeSounds.com</a></p>
+    <p>Developed by <a href="http://www.CandiceDavidson.com">Candice Davidson</a></p>
+        <p> mp3 provided by <a href="http://www.orangefreesounds.com/">OrangeFreeSounds.com</a></p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="script.js"></script>
